RESOLVED FIXED193350
[GTK] Momentum scrolling stops abruptly before websites end
https://bugs.webkit.org/show_bug.cgi?id=193350
Summary [GTK] Momentum scrolling stops abruptly before websites end
Christian Kaindl
Reported 2019-01-11 05:38:20 PST
Created attachment 358892 [details] Version/build details I am using the Epiphany Technology Preview (see attached screenshot). When I scroll with my trackpad, I have momentum scrolling in Epiphany. When I scroll fast so that the momentum is enough to reach the end of the website, then the scrolling stops abruptly (up to ~50px) before the real end of the website is reached. So it needs a second scroll to really reach the top (which is what I did in the video, that is not lag) In my testing, the harder/faster the momentum scroll is, the bigger the gap is. This also happens with Epiphany 3.28 (which is what is in my OS repositories right now). I created a screen cast showing the issue, so it is easier to understand: https://www.youtube.com/watch?v=Q-3YBoONEuA I am using a Purism Librem 13 v2 laptop (I am not sure on the trackpad specifics, any command help for terminal output appreciated). My operation system is the newsest Solus GNOME edition, currently running GNOME 2.28. Note: This issue was originally filed on Epiphany's bug tracker: https://gitlab.gnome.org/GNOME/epiphany/issues/615
Attachments
Version/build details (39.17 KB, image/png)
2019-01-11 05:38 PST, Christian Kaindl
no flags
Patch (1.94 KB, patch)
2019-01-30 04:45 PST, Alice Mikhaylenko
no flags
Archive of layout-test-results from ews125 for ios-simulator-wk2 (2.46 MB, application/zip)
2019-01-30 06:42 PST, EWS Watchlist
no flags
Alice Mikhaylenko
Comment 1 2019-01-30 04:45:48 PST
Alice Mikhaylenko
Comment 2 2019-01-30 04:48:06 PST
The problem is that when velocity is immediately set to 0 after overshooting, and any position change is ignored when velocity is already 0.
EWS Watchlist
Comment 3 2019-01-30 06:42:17 PST
Comment on attachment 360570 [details] Patch Attachment 360570 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: https://webkit-queues.webkit.org/results/10951388 New failing tests: imported/w3c/web-platform-tests/webrtc/simplecall.https.html
EWS Watchlist
Comment 4 2019-01-30 06:42:19 PST
Created attachment 360576 [details] Archive of layout-test-results from ews125 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews125 Port: ios-simulator-wk2 Platform: Mac OS X 10.13.6
Michael Catanzaro
Comment 5 2019-01-30 07:10:08 PST
Comment on attachment 360570 [details] Patch Note this code is copied from gtkkineticscrolling.c in GTK+. Do we want to resync with them? It looks like we've both made a few improvements since this was copied.
Alice Mikhaylenko
Comment 6 2019-01-30 07:15:43 PST
This particular part isn't copied. GTK has full-fledged overshooting instead: https://gitlab.gnome.org/GNOME/gtk/blob/gtk-3-24/gtk/gtkkineticscrolling.c#L146-218 Also, the last change in gtk-3-24 branch is from 2 years ago, and is already in webkit.
WebKit Commit Bot
Comment 7 2019-01-31 08:52:28 PST
Comment on attachment 360570 [details] Patch Clearing flags on attachment: 360570 Committed r240789: <https://trac.webkit.org/changeset/240789>
WebKit Commit Bot
Comment 8 2019-01-31 08:52:30 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.