[GTK] Momentum scrolling stops abruptly before websites end https://bugs.webkit.org/show_bug.cgi?id=193350

Patch by Alexander Mikhaylenko <exalm7659@gmail.com> on 2019-01-31
Reviewed by Carlos Garcia Campos.

Don't immediately set velocity to 0 when position reaches upper or bottom limit.
Instead, set it to the overshot distance, so that position exactly matches upper
or lower limit on the next frame, and then clamp velocity to 0 using the existing
mechanism.

* platform/ScrollAnimationKinetic.cpp:
(WebCore::ScrollAnimationKinetic::PerAxisData::animateScroll):

Canonical link: https://commits.webkit.org/208570@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@240789 268f45cc-cd09-0410-ab3c-d52691b4dbfc